# pyenv-poetry-example

./: pyproject.toml
tests/: test_example.py
